--- a/public/css/main.css
+++ b/public/css/main.css
@@ -6,9 +6,39 @@
     margin: 50px;
 }
 
-#talk {
+.text {
     width: 100%;
     text-align: center;
     margin-top: 10%;
 }
 
+#video {
+    margin-top: 100px;
+    width: 580px;
+    height: 320px;
+    margin: 0 auto;
+    position: relative;
+}
+
+#frame, #coverup {
+    position: absolute;
+    width: 100%;
+    height: 100%;
+}
+
+#coverup {
+    background-color: white;
+    z-index: 10;
+    opacity: 1;
+    cursor: pointer;
+    top: 0;
+}
+
+#coverup button {
+    margin-left:180px;
+    margin-top: 150px;
+}
+
+#rickrolled {
+    opacity: 0;
+}
