--- a/public/css/main.css
+++ b/public/css/main.css
@@ -1,44 +1,13 @@
-#landingContainer, #mainContainer {
-    display: none;
+.localForm {
+  margin: 50px;
 }
 
-#signInForm{
-    margin: 50px;
+.row div {
+  background-color: #e1e2e1;
 }
 
-.text {
-    width: 100%;
-    text-align: center;
-    margin-top: 10%;
+#siteContainer,
+#appContainer {
+  display: none;
 }
-
-#video {
-    margin-top: 100px;
-    width: 580px;
-    height: 320px;
-    margin: 0 auto;
-    position: relative;
-}
-
-#frame, #coverup {
-    position: absolute;
-    width: 100%;
-    height: 100%;
-}
-
-#coverup {
-    background-color: white;
-    z-index: 10;
-    opacity: 1;
-    cursor: pointer;
-    top: 0;
-}
-
-#coverup button {
-    margin-left:180px;
-    margin-top: 150px;
-}
-
-#rickrolled {
-    opacity: 0;
-}
+/*# sourceMappingURL=main.css.map */
