--- a/public/css/main.css
+++ b/public/css/main.css
@@ -1,5 +1,10 @@
 .localForm {
-  margin: 50px;
+  margin: 20px;
+}
+
+.custom-select {
+  border-bottom-right-radius: 0px;
+  border-top-right-radius: 0px;
 }
 
 .row div {
