--- a/public/scss/_forms.scss
+++ b/public/scss/_forms.scss
@@ -1,3 +1,8 @@
 .localForm {
-	margin: 50px;
+	margin: 20px;
+}
+
+.custom-select {
+	border-bottom-right-radius: 0px;
+	border-top-right-radius: 0px;
 }
