--- a/public/scss/_forms.scss
+++ b/public/scss/_forms.scss
@@ -1,8 +1,8 @@
-.localForm {
-	margin: 20px;
-}
-
 .custom-select {
 	border-bottom-right-radius: 0px;
 	border-top-right-radius: 0px;
+}
+
+.formTitle {
+	cursor: pointer;
 }
