--- a/public/css/main.css
+++ b/public/css/main.css
@@ -1,3 +1,23 @@
+#popoverContainer {
+  position: absolute;
+  width: 100vw;
+  height: 500vh;
+  margin-top: -200vh;
+  background-color: rgba(0, 0, 0, 0);
+  z-index: 10;
+}
+
+#popoverContent {
+  position: fixed;
+  top: 50%;
+  margin: 0 auto;
+  background-color: #f9fafb;
+  width: 500px;
+  height: 200px;
+  z-index: 20;
+  opacity: 1 !important;
+}
+
 .custom-select {
   border-bottom-right-radius: 0px;
   border-top-right-radius: 0px;
@@ -8,12 +28,16 @@
 }
 
 .row > div {
-  background-color: #e1e2e1;
+  background-color: #f9fafb;
   padding: 20px;
 }
 
 .hide {
   display: none;
+}
+
+.show {
+  display: block;
 }
 
 table {
