automating select menus

--- a/public/scss/_tables.scss
+++ b/public/scss/_tables.scss
@@ -5,6 +5,8 @@
 		padding-top: 8px;
 		padding-bottom: 8px;
 		margin-bottom: 0px;
+		min-width: 205px;
+		text-align: center;
 		// @refactored margin-bottom
 	}
 }
