--- a/public/css/main.css
+++ b/public/css/main.css
@@ -54,11 +54,14 @@
   padding-top: 8px;
   padding-bottom: 8px;
   margin-bottom: 0px;
+  min-width: 205px;
+  text-align: center;
 }
 
 .custom-select {
   border-bottom-right-radius: 0px;
   border-top-right-radius: 0px;
+  max-width: 200px;
 }
 
 .formTitle {
