--- a/public/scss/_forms.scss
+++ b/public/scss/_forms.scss
@@ -1,6 +1,8 @@
 .custom-select {
 	border-bottom-right-radius: 0px;
 	border-top-right-radius: 0px;
+	max-width: 200px;
+	// @responsive => redefine max width
 }
 
 .formTitle {
