--- a/public/css/main.css
+++ b/public/css/main.css
@@ -1,3 +1,14 @@
+#appContainer {
+  padding: 3px 5px 3px 5px;
+}
+
+#appContainer div {
+  margin: 0px;
+  width: 100px;
+  height: 100px;
+  background-color: black;
+}
+
 #customModalContainer {
   position: absolute;
   width: 100vw;
