--- a/public/css/main.css
+++ b/public/css/main.css
@@ -1,12 +1,42 @@
-#appContainer {
-  padding: 3px 5px 3px 5px;
+#content {
+  display: -ms-grid;
+  display: grid;
+  -ms-grid-columns: auto;
+      grid-template-columns: auto;
+  grid-row-gap: 15px;
+  padding: 15px;
+  max-width: 420px;
+  margin: 0 auto;
 }
 
-#appContainer div {
-  margin: 0px;
-  width: 100px;
-  height: 100px;
-  background-color: black;
+#content div {
+  background-color: #e1e2e1;
+  -webkit-box-shadow: 0 1px 3px rgba(0, 0, 0, 0.12), 0 1px 2px rgba(0, 0, 0, 0.24);
+          box-shadow: 0 1px 3px rgba(0, 0, 0, 0.12), 0 1px 2px rgba(0, 0, 0, 0.24);
+}
+
+#content #square {
+  padding-bottom: 100%;
+  -ms-grid-column: 1;
+      grid-column-start: 1;
+  -ms-grid-column-span: 1;
+      grid-column-end: span 1;
+  -ms-grid-row: 1;
+      grid-row-start: 1;
+  -ms-grid-row-span: 1;
+      grid-row-end: span 1;
+}
+
+#content #rectangle {
+  padding-bottom: 61.8%;
+  -ms-grid-column: 1;
+      grid-column-start: 1;
+  -ms-grid-column-span: 1;
+      grid-column-end: span 1;
+  -ms-grid-row: 2;
+      grid-row-start: 2;
+  -ms-grid-row-span: 1;
+      grid-row-end: span 1;
 }
 
 #customModalContainer {
