--- a/public/scss/_layout.scss
+++ b/public/scss/_layout.scss
@@ -1,10 +1,29 @@
-#appContainer {
-	padding: 3px 5px 3px 5px;
+#content {
+	display: grid;
+	grid-template-columns: auto;
+	grid-row-gap: 15px;
+	padding: 15px;
+	max-width: 420px;
+	margin: 0 auto;
 
 	& div {
-		margin: 0px;
-		width: 100px;
-		height: 100px;
-		background-color: black;
+		background-color: $gray2;
+		box-shadow: 0 1px 3px rgba(0, 0, 0, 0.12), 0 1px 2px rgba(0, 0, 0, 0.24);
+	}
+
+	#square {
+		padding-bottom: 100%;
+		grid-column-start: 1;
+		grid-column-end: span 1;
+		grid-row-start: 1;
+		grid-row-end: span 1;
+	}
+
+	#rectangle {
+		padding-bottom: 61.8%;
+		grid-column-start: 1;
+		grid-column-end: span 1;
+		grid-row-start: 2;
+		grid-row-end: span 1;
 	}
 }
