--- a/public/css/main.css
+++ b/public/css/main.css
@@ -1,42 +1,57 @@
 #content {
   display: -ms-grid;
   display: grid;
-  -ms-grid-columns: auto;
-      grid-template-columns: auto;
-  grid-row-gap: 15px;
-  padding: 15px;
+  -ms-grid-columns: 1fr;
+      grid-template-columns: 1fr;
+  -ms-grid-rows: 1fr;
+      grid-template-rows: 1fr;
+  grid-row-gap: 5px;
   max-width: 420px;
   margin: 0 auto;
+  margin-top: 15px;
 }
 
-#content div {
-  background-color: #e1e2e1;
+#content > div {
+  border-radius: 15px;
+  background-color: #262626;
   -webkit-box-shadow: 0 1px 3px rgba(0, 0, 0, 0.12), 0 1px 2px rgba(0, 0, 0, 0.24);
           box-shadow: 0 1px 3px rgba(0, 0, 0, 0.12), 0 1px 2px rgba(0, 0, 0, 0.24);
 }
 
 #content #square {
-  padding-bottom: 100%;
+  position: relative;
+  padding-bottom: 161.8%;
   -ms-grid-column: 1;
-      grid-column-start: 1;
   -ms-grid-column-span: 1;
-      grid-column-end: span 1;
+  grid-column: 1/2;
   -ms-grid-row: 1;
-      grid-row-start: 1;
-  -ms-grid-row-span: 1;
-      grid-row-end: span 1;
+  -ms-grid-row-span: 2;
+  grid-row: 1/3;
+  overflow: hidden;
+}
+
+#content section {
+  width: 100%;
+  height: 100%;
+  overflow-y: scroll;
+  padding-right: 17px;
+  -webkit-box-sizing: content-box;
+          box-sizing: content-box;
+  left: 7px;
 }
 
 #content #rectangle {
+  margin: 0px 15px 15px 15px;
+  border-radius: 10px;
+  position: relative;
   padding-bottom: 61.8%;
   -ms-grid-column: 1;
-      grid-column-start: 1;
   -ms-grid-column-span: 1;
-      grid-column-end: span 1;
+  grid-column: 1/2;
   -ms-grid-row: 2;
-      grid-row-start: 2;
   -ms-grid-row-span: 1;
-      grid-row-end: span 1;
+  grid-row: 2/3;
+  overflow: hidden;
 }
 
 #customModalContainer {
@@ -49,14 +64,14 @@
 }
 
 #customModalContent {
-  border-color: #ced4da;
+  border-color: #57585a;
   border-radius: 4.7px;
   padding: 5px;
   position: fixed;
   top: 40%;
   left: 5%;
   margin: 0 auto;
-  background-color: #f9fafb;
+  background-color: #262626;
   width: 90%;
   z-index: 20;
   opacity: 1 !important;
@@ -85,18 +100,71 @@
   content: ': ';
 }
 
-#showOrdersTableTitleWrapper {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
+section.localTable {
+  position: absolute;
+  width: 100%;
+  background-color: #262626;
+  font-size: 14px;
 }
 
-#showOrdersTableTitleWrapper h6 {
+section.localTable > div {
+  background-color: #262626;
+  position: -webkit-sticky;
+  position: sticky;
+  top: 0;
+  padding-left: 20%;
+}
+
+section.localTable h6 {
   padding-top: 8px;
   padding-bottom: 8px;
   margin-bottom: 0px;
   min-width: 205px;
   text-align: center;
+}
+
+section.localTable table tr:nth-child(even) {
+  background-color: #373737;
+  border-top: 1px solid #57585a;
+  border-bottom: 1px solid #57585a;
+}
+
+#card {
+  display: -ms-grid;
+  display: grid;
+  width: 100%;
+  -ms-grid-columns: 61.8% 38.2%;
+      grid-template-columns: 61.8% 38.2%;
+}
+
+#card #title {
+  -ms-grid-column: 1;
+  -ms-grid-column-span: 1;
+  grid-column: 1 / 2;
+  -ms-grid-row: 1;
+  -ms-grid-row-span: 1;
+  grid-row: 1/2;
+}
+
+#card #sub-title {
+  -ms-grid-column: 2;
+  -ms-grid-column-span: 1;
+  grid-column: 2 / 3;
+  -ms-grid-row: 1;
+  -ms-grid-row-span: 1;
+  grid-row: 1/2;
+}
+
+#card .main {
+  -ms-grid-column: 1;
+  -ms-grid-column-span: 1;
+  grid-column: 1 / 2;
+}
+
+#card .side {
+  -ms-grid-column: 2;
+  -ms-grid-column-span: 1;
+  grid-column: 2 / 3;
 }
 
 .custom-select {
@@ -110,7 +178,7 @@
 }
 
 .row > div {
-  background-color: #f9fafb;
+  background-color: #57585a;
   padding: 20px;
 }
 
@@ -129,6 +197,11 @@ table {
 #siteContainer,
 #appContainer {
   display: none;
+  color: #f9fafb;
+}
+
+i {
+  color: #f9fafb;
 }
 
 .btn.focus,
