--- a/public/scss/_customModal.scss
+++ b/public/scss/_customModal.scss
@@ -14,7 +14,7 @@
 	top: 40%;
 	left: 5%;
 	margin: 0 auto;
-	background-color: $gray1;
+	background-color: $offWhite;
 	width: 90%;
 	z-index: 20;
 	opacity: 1 !important;
