--- a/public/scss/_layout.scss
+++ b/public/scss/_layout.scss
@@ -1,29 +1,42 @@
 #content {
 	display: grid;
-	grid-template-columns: auto;
-	grid-row-gap: 15px;
-	padding: 15px;
+	grid-template-columns: 1fr;
+	grid-template-rows: 1fr;
+	grid-row-gap: 5px;
 	max-width: 420px;
 	margin: 0 auto;
+	margin-top: 15px;
 
-	& div {
-		background-color: $gray2;
+	& > div {
+		border-radius: 15px;
+		background-color: $offWhite;
 		box-shadow: 0 1px 3px rgba(0, 0, 0, 0.12), 0 1px 2px rgba(0, 0, 0, 0.24);
 	}
 
 	#square {
-		padding-bottom: 100%;
-		grid-column-start: 1;
-		grid-column-end: span 1;
-		grid-row-start: 1;
-		grid-row-end: span 1;
+		position: relative;
+		padding-bottom: 161.8%;
+		grid-column: 1/2;
+		grid-row: 1/3;
+		overflow: hidden;
+	}
+
+	section {
+		width: 100%;
+		height: 100%;
+		overflow-y: scroll;
+		padding-right: 17px;
+		box-sizing: content-box;
+		left: 7px;
 	}
 
 	#rectangle {
+		margin: 0px 15px 15px 15px;
+		border-radius: 10px;
+		position: relative;
 		padding-bottom: 61.8%;
-		grid-column-start: 1;
-		grid-column-end: span 1;
-		grid-row-start: 2;
-		grid-row-end: span 1;
+		grid-column: 1/2;
+		grid-row: 2/3;
+		overflow: hidden;
 	}
 }
