--- a/public/scss/_card.scss
+++ b/public/scss/_card.scss
@@ -1,4 +1,5 @@
-#card {
+section.card {
+	border: none;
 	display: grid;
 	width: 100%;
 	grid-template-columns: 61.8% 38.2%;
@@ -14,10 +15,10 @@
 	}
 
 	.main {
-		grid-column: 1 / 2;
+		grid-column: 1;
 	}
 
 	.side {
-		grid-column: 2 / 3;
+		grid-column: 2;
 	}
 }
