--- a/public/scss/_layout.scss
+++ b/public/scss/_layout.scss
@@ -21,22 +21,24 @@
 		overflow: hidden;
 	}
 
+	#rectangle {
+		display: none;
+		position: relative;
+		padding-bottom: 61.8%;
+		grid-column: 1/2;
+		grid-row: 2/3;
+		overflow: hidden;
+		border-radius: 10px;
+		margin: 0px 15px 15px 15px;
+	}
+
 	section {
+		position: absolute;
 		width: 100%;
 		height: 100%;
 		overflow-y: scroll;
 		padding-right: 17px;
 		box-sizing: content-box;
 		left: 7px;
-	}
-
-	#rectangle {
-		margin: 0px 15px 15px 15px;
-		border-radius: 10px;
-		position: relative;
-		padding-bottom: 61.8%;
-		grid-column: 1/2;
-		grid-row: 2/3;
-		overflow: hidden;
 	}
 }
