--- a/public/css/main.css
+++ b/public/css/main.css
@@ -13,7 +13,6 @@
 
 #content > div {
   border-radius: 15px;
-  background-color: #262626;
   -webkit-box-shadow: 0 1px 3px rgba(0, 0, 0, 0.12), 0 1px 2px rgba(0, 0, 0, 0.24);
           box-shadow: 0 1px 3px rgba(0, 0, 0, 0.12), 0 1px 2px rgba(0, 0, 0, 0.24);
 }
@@ -28,10 +27,10 @@
   -ms-grid-row-span: 2;
   grid-row: 1/3;
   overflow: hidden;
+  background-color: #262626;
 }
 
 #content #rectangle {
-  display: none;
   position: relative;
   padding-bottom: 61.8%;
   -ms-grid-column: 1;
@@ -41,6 +40,7 @@
   -ms-grid-row-span: 1;
   grid-row: 2/3;
   overflow: hidden;
+  background-color: #262626;
   border-radius: 10px;
   margin: 0px 15px 15px 15px;
 }
@@ -129,7 +129,7 @@ section.localTable table tr:nth-child(even) {
   border-bottom: 1px solid #57585a;
 }
 
-section.card {
+section.localCard {
   border: none;
   display: -ms-grid;
   display: grid;
@@ -138,7 +138,7 @@ section.card {
       grid-template-columns: 61.8% 38.2%;
 }
 
-section.card #title {
+section.localCard #title {
   -ms-grid-column: 1;
   -ms-grid-column-span: 1;
   grid-column: 1 / 2;
@@ -147,7 +147,7 @@ section.card #title {
   grid-row: 1/2;
 }
 
-section.card #sub-title {
+section.localCard #sub-title {
   -ms-grid-column: 2;
   -ms-grid-column-span: 1;
   grid-column: 2 / 3;
@@ -156,12 +156,12 @@ section.card #sub-title {
   grid-row: 1/2;
 }
 
-section.card .main {
+section.localCard .main {
   -ms-grid-column: 1;
   grid-column: 1;
 }
 
-section.card .side {
+section.localCard .side {
   -ms-grid-column: 2;
   grid-column: 2;
 }
@@ -199,7 +199,8 @@ table {
   color: #f9fafb;
 }
 
-i {
+i,
+p {
   color: #f9fafb;
 }
 
