--- a/public/css/main.css
+++ b/public/css/main.css
@@ -107,6 +107,10 @@ section.localTable {
   font-size: 14px;
 }
 
+section.localTable .tableRow {
+  cursor: pointer;
+}
+
 section.localTable > div {
   background-color: #262626;
   position: -webkit-sticky;
@@ -134,14 +138,19 @@ section.localCard {
   display: -ms-grid;
   display: grid;
   width: 100%;
+  padding: 8px 5px 5px 5px;
   -ms-grid-columns: 61.8% 38.2%;
       grid-template-columns: 61.8% 38.2%;
+  -ms-grid-rows: 50px;
+      grid-template-rows: 50px;
+  grid-auto-rows: 1fr;
+  grid-auto-flow: column;
 }
 
 section.localCard #title {
   -ms-grid-column: 1;
-  -ms-grid-column-span: 1;
-  grid-column: 1 / 2;
+  -ms-grid-column-span: 2;
+  grid-column: 1 / span 2;
   -ms-grid-row: 1;
   -ms-grid-row-span: 1;
   grid-row: 1/2;
@@ -197,6 +206,16 @@ table {
 #appContainer {
   display: none;
   color: #f9fafb;
+}
+
+.hide {
+  display: none;
+}
+
+.selected {
+  color: #262626;
+  background-color: #ced4da !important;
+  font-weight: 500;
 }
 
 i,
