--- a/public/scss/_card.scss
+++ b/public/scss/_card.scss
@@ -2,10 +2,15 @@ section.localCard {
 	border: none;
 	display: grid;
 	width: 100%;
+	padding: 8px 5px 5px 5px;
+
 	grid-template-columns: 61.8% 38.2%;
+	grid-template-rows: 50px;
+	grid-auto-rows: 1fr;
+	grid-auto-flow: column;
 
 	#title {
-		grid-column: 1 / 2;
+		grid-column: 1 / span 2;
 		grid-row: 1/2;
 	}
 
