--- a/public/css/main.css
+++ b/public/css/main.css
@@ -8,31 +8,28 @@
   grid-row-gap: 5px;
   max-width: 420px;
   margin: 0 auto;
-  margin-top: 15px;
 }
 
 #content > div {
-  border-radius: 15px;
   -webkit-box-shadow: 0 1px 3px rgba(0, 0, 0, 0.12), 0 1px 2px rgba(0, 0, 0, 0.24);
           box-shadow: 0 1px 3px rgba(0, 0, 0, 0.12), 0 1px 2px rgba(0, 0, 0, 0.24);
 }
 
 #content #square {
-  position: relative;
-  padding-bottom: 161.8%;
+  padding-bottom: 143%;
   -ms-grid-column: 1;
   -ms-grid-column-span: 1;
   grid-column: 1/2;
   -ms-grid-row: 1;
   -ms-grid-row-span: 2;
   grid-row: 1/3;
-  overflow: hidden;
   background-color: #262626;
 }
 
 #content #rectangle {
-  position: relative;
-  padding-bottom: 61.8%;
+  position: fixed;
+  top: 60%;
+  width: 55.5%;
   -ms-grid-column: 1;
   -ms-grid-column-span: 1;
   grid-column: 1/2;
@@ -42,14 +39,19 @@
   overflow: hidden;
   background-color: #262626;
   border-radius: 10px;
-  margin: 0px 15px 15px 15px;
+  margin: 10px;
 }
 
 #content section {
-  position: absolute;
   width: 100%;
   height: 100%;
-  overflow-y: scroll;
+  -webkit-box-sizing: content-box;
+          box-sizing: content-box;
+}
+
+#content .old {
+  width: 100%;
+  height: 100%;
   padding-right: 17px;
   -webkit-box-sizing: content-box;
           box-sizing: content-box;
@@ -117,6 +119,7 @@ section.localTable > div {
   position: sticky;
   top: 0;
   padding-left: 20%;
+  border-radius: 0px !important;
 }
 
 section.localTable h6 {
@@ -125,6 +128,11 @@ section.localTable h6 {
   margin-bottom: 0px;
   min-width: 205px;
   text-align: center;
+}
+
+section.localTable table tr td:first-child,
+section.localTable table tr th:first-child {
+  padding-left: 10px;
 }
 
 section.localTable table tr:nth-child(even) {
