--- a/public/scss/_layout.scss
+++ b/public/scss/_layout.scss
@@ -5,39 +5,39 @@
 	grid-row-gap: 5px;
 	max-width: 420px;
 	margin: 0 auto;
-	margin-top: 15px;
 
 	& > div {
-		border-radius: 15px;
-
 		box-shadow: 0 1px 3px rgba(0, 0, 0, 0.12), 0 1px 2px rgba(0, 0, 0, 0.24);
 	}
 
 	#square {
-		position: relative;
-		padding-bottom: 161.8%;
+		padding-bottom: 143%;
 		grid-column: 1/2;
 		grid-row: 1/3;
-		overflow: hidden;
 		background-color: $offWhite;
 	}
 
 	#rectangle {
-		position: relative;
-		padding-bottom: 61.8%;
+		position: fixed;
+		top: 60%;
+		width: 55.5%;
 		grid-column: 1/2;
 		grid-row: 2/3;
 		overflow: hidden;
 		background-color: $offWhite;
 		border-radius: 10px;
-		margin: 0px 15px 15px 15px;
+		margin: 10px;
 	}
 
 	section {
-		position: absolute;
 		width: 100%;
 		height: 100%;
-		overflow-y: scroll;
+		box-sizing: content-box;
+	}
+
+	.old {
+		width: 100%;
+		height: 100%;
 		padding-right: 17px;
 		box-sizing: content-box;
 		left: 7px;
