--- a/public/css/main.css
+++ b/public/css/main.css
@@ -1,11 +1,4 @@
 #content {
-  display: -ms-grid;
-  display: grid;
-  -ms-grid-columns: 1fr;
-      grid-template-columns: 1fr;
-  -ms-grid-rows: 1fr;
-      grid-template-rows: 1fr;
-  grid-row-gap: 5px;
   max-width: 420px;
   margin: 0 auto;
 }
@@ -16,30 +9,8 @@
 }
 
 #content #square {
-  padding-bottom: 143%;
-  -ms-grid-column: 1;
-  -ms-grid-column-span: 1;
-  grid-column: 1/2;
-  -ms-grid-row: 1;
-  -ms-grid-row-span: 2;
-  grid-row: 1/3;
+  padding-bottom: 100%;
   background-color: #262626;
-}
-
-#content #rectangle {
-  position: fixed;
-  top: 60%;
-  width: 55.5%;
-  -ms-grid-column: 1;
-  -ms-grid-column-span: 1;
-  grid-column: 1/2;
-  -ms-grid-row: 2;
-  -ms-grid-row-span: 1;
-  grid-row: 2/3;
-  overflow: hidden;
-  background-color: #262626;
-  border-radius: 10px;
-  margin: 10px;
 }
 
 #content section {
@@ -56,6 +27,16 @@
   -webkit-box-sizing: content-box;
           box-sizing: content-box;
   left: 7px;
+}
+
+#rectangle {
+  position: fixed;
+  bottom: 10%;
+  width: 96%;
+  margin-left: 2%;
+  overflow: hidden;
+  background-color: #262626;
+  border-radius: 10px;
 }
 
 #customModalContainer {
@@ -151,7 +132,7 @@ section.localCard {
       grid-template-columns: 61.8% 38.2%;
   -ms-grid-rows: 50px;
       grid-template-rows: 50px;
-  grid-auto-rows: 1fr;
+  grid-auto-rows: 30px;
   grid-auto-flow: column;
 }
 
