--- a/public/scss/_card.scss
+++ b/public/scss/_card.scss
@@ -6,7 +6,7 @@ section.localCard {
 
 	grid-template-columns: 61.8% 38.2%;
 	grid-template-rows: 50px;
-	grid-auto-rows: 1fr;
+	grid-auto-rows: 30px;
 	grid-auto-flow: column;
 
 	#title {
