--- a/public/scss/_layout.scss
+++ b/public/scss/_layout.scss
@@ -1,8 +1,4 @@
 #content {
-	display: grid;
-	grid-template-columns: 1fr;
-	grid-template-rows: 1fr;
-	grid-row-gap: 5px;
 	max-width: 420px;
 	margin: 0 auto;
 
@@ -11,22 +7,8 @@
 	}
 
 	#square {
-		padding-bottom: 143%;
-		grid-column: 1/2;
-		grid-row: 1/3;
+		padding-bottom: 100%;
 		background-color: $offWhite;
-	}
-
-	#rectangle {
-		position: fixed;
-		top: 60%;
-		width: 55.5%;
-		grid-column: 1/2;
-		grid-row: 2/3;
-		overflow: hidden;
-		background-color: $offWhite;
-		border-radius: 10px;
-		margin: 10px;
 	}
 
 	section {
@@ -36,10 +18,21 @@
 	}
 
 	.old {
+		// to hide scrollbar
 		width: 100%;
 		height: 100%;
 		padding-right: 17px;
 		box-sizing: content-box;
 		left: 7px;
 	}
+}
+
+#rectangle {
+	position: fixed;
+	bottom: 10%;
+	width: 96%;
+	margin-left: 2%;
+	overflow: hidden;
+	background-color: $offWhite;
+	border-radius: 10px;
 }
