--- a/public/css/main.css
+++ b/public/css/main.css
@@ -37,6 +37,7 @@
   overflow: hidden;
   background-color: #262626;
   border-radius: 10px;
+  max-width: 420px;
 }
 
 #customModalContainer {
@@ -162,6 +163,10 @@ section.localCard .main {
 section.localCard .side {
   -ms-grid-column: 2;
   grid-column: 2;
+}
+
+.localForm {
+  padding: 15px;
 }
 
 .custom-select {
