--- a/public/css/main.css
+++ b/public/css/main.css
@@ -3,33 +3,13 @@
   margin: 0 auto;
 }
 
-#content > div {
-  -webkit-box-shadow: 0 1px 3px rgba(0, 0, 0, 0.12), 0 1px 2px rgba(0, 0, 0, 0.24);
-          box-shadow: 0 1px 3px rgba(0, 0, 0, 0.12), 0 1px 2px rgba(0, 0, 0, 0.24);
-}
-
 #content #square {
-  padding-bottom: 100%;
+  min-height: 100vh;
   background-color: #262626;
 }
 
-#content section {
-  width: 100%;
-  height: 100%;
-  -webkit-box-sizing: content-box;
-          box-sizing: content-box;
-}
-
-#content .old {
-  width: 100%;
-  height: 100%;
-  padding-right: 17px;
-  -webkit-box-sizing: content-box;
-          box-sizing: content-box;
-  left: 7px;
-}
-
-#rectangle {
+#content #rectangle {
+  border: 1px solid white;
   position: fixed;
   bottom: 10%;
   width: 96%;
@@ -37,7 +17,14 @@
   overflow: hidden;
   background-color: #262626;
   border-radius: 10px;
-  max-width: 420px;
+  -webkit-box-shadow: 0 1px 3px rgba(0, 0, 0, 0.12), 0 1px 2px rgba(0, 0, 0, 0.24);
+          box-shadow: 0 1px 3px rgba(0, 0, 0, 0.12), 0 1px 2px rgba(0, 0, 0, 0.24);
+}
+
+#content #custom-nav {
+  position: fixed;
+  bottom: 5%;
+  width: 50px;
 }
 
 #customModalContainer {
@@ -95,13 +82,18 @@ section.localTable .tableRow {
   cursor: pointer;
 }
 
-section.localTable > div {
+section.localTable div#ordersPagination {
   background-color: #262626;
   position: -webkit-sticky;
   position: sticky;
   top: 0;
-  padding-left: 20%;
+  padding-left: 5%;
+  padding-right: 5%;
   border-radius: 0px !important;
+  display: -ms-grid;
+  display: grid;
+  -ms-grid-columns: 1fr 3fr 1fr;
+      grid-template-columns: 1fr 3fr 1fr;
 }
 
 section.localTable h6 {
@@ -115,6 +107,10 @@ section.localTable h6 {
 section.localTable table tr td:first-child,
 section.localTable table tr th:first-child {
   padding-left: 10px;
+}
+
+section.localTable table tr td:last-child {
+  padding-right: 10px;
 }
 
 section.localTable table tr:nth-child(even) {
