--- a/public/scss/_layout.scss
+++ b/public/scss/_layout.scss
@@ -2,38 +2,26 @@
 	max-width: 420px;
 	margin: 0 auto;
 
-	& > div {
-		box-shadow: 0 1px 3px rgba(0, 0, 0, 0.12), 0 1px 2px rgba(0, 0, 0, 0.24);
-	}
-
 	#square {
-		padding-bottom: 100%;
+		min-height: 100vh;
 		background-color: $offWhite;
 	}
 
-	section {
-		width: 100%;
-		height: 100%;
-		box-sizing: content-box;
+	#rectangle {
+		border: 1px solid white;
+		position: fixed;
+		bottom: 10%;
+		width: 96%;
+		margin-left: 2%;
+		overflow: hidden;
+		background-color: $offWhite;
+		border-radius: 10px;
+		box-shadow: 0 1px 3px rgba(0, 0, 0, 0.12), 0 1px 2px rgba(0, 0, 0, 0.24);
 	}
 
-	.old {
-		// to hide scrollbar
-		width: 100%;
-		height: 100%;
-		padding-right: 17px;
-		box-sizing: content-box;
-		left: 7px;
+	#custom-nav {
+		position: fixed;
+		bottom: 5%;
+		width: 50px;
 	}
-}
-
-#rectangle {
-	position: fixed;
-	bottom: 10%;
-	width: 96%;
-	margin-left: 2%;
-	overflow: hidden;
-	background-color: $offWhite;
-	border-radius: 10px;
-	max-width: 420px;
 }
