--- a/public/scss/_table.scss
+++ b/public/scss/_table.scss
@@ -6,7 +6,7 @@ section.localTable {
 		cursor: pointer;
 	}
 
-	div#ordersPagination {
+	div.pagination {
 		background-color: $offWhite;
 		position: sticky;
 		top: 0;
