--- a/public/scss/main.scss
+++ b/public/scss/main.scss
@@ -1,6 +1,7 @@
 @import 'variables';
 @import 'layout';
 @import 'customModal';
+@import 'nav';
 @import 'table';
 @import 'card';
 @import 'forms';
