--- a/public/scss/_card.scss
+++ b/public/scss/_card.scss
@@ -1,7 +1,7 @@
 section.localCard {
 	border: none;
 	display: grid;
-	width: 100%;
+	width: 400px;
 	padding: 8px 5px 5px 5px;
 
 	grid-template-columns: 61.8% 38.2%;
