--- a/public/scss/_card.scss
+++ b/public/scss/_card.scss
@@ -2,6 +2,7 @@ section.localCard {
 	border: none;
 	display: grid;
 	width: 400px;
+	margin: 4px;
 	padding: 8px 5px 5px 5px;
 
 	grid-template-columns: 61.8% 38.2%;
