--- a/public/scss/_layout.scss
+++ b/public/scss/_layout.scss
@@ -12,6 +12,7 @@
 		position: fixed;
 		bottom: 10%;
 		overflow: hidden;
+		max-width: 92vw !important;
 		left: 50%;
 		transform: translateX(-50%);
 		background-color: $offWhite;
