--- a/public/scss/main.scss
+++ b/public/scss/main.scss
@@ -23,6 +23,14 @@
 	font-weight: 500;
 }
 
+input,
+textarea,
+button,
+select,
+a {
+	-webkit-tap-highlight-color: rgba(0, 0, 0, 0);
+}
+
 i,
 p {
 	color: $fontColor;
