--- a/public/css/main.css
+++ b/public/css/main.css
@@ -158,6 +158,7 @@ section.localTable p#total {
 
 section.localCard {
   border: none;
+  position: relative;
   display: -ms-grid;
   display: grid;
   width: 400px;
@@ -197,6 +198,12 @@ section.localCard .main {
 section.localCard .side {
   -ms-grid-column: 2;
   grid-column: 2;
+}
+
+section.localCard .card-button {
+  position: absolute;
+  right: 10px;
+  top: 8px;
 }
 
 .localForm {
