--- a/public/css/main.css
+++ b/public/css/main.css
@@ -40,6 +40,12 @@
   padding-left: 1px;
 }
 
+.rectangle-button {
+  position: absolute;
+  right: 15px;
+  top: 15px;
+}
+
 #customModalContainer {
   position: absolute;
   width: 100vw;
@@ -161,9 +167,8 @@ section.localCard {
   position: relative;
   display: -ms-grid;
   display: grid;
-  width: 400px;
-  margin: 4px;
-  padding: 8px 5px 5px 5px;
+  width: 92vw;
+  padding: 12px 9px 9px 9px;
   -ms-grid-columns: 61.8% 38.2%;
       grid-template-columns: 61.8% 38.2%;
   -ms-grid-rows: 50px;
@@ -200,24 +205,47 @@ section.localCard .side {
   grid-column: 2;
 }
 
-section.localCard .card-button {
-  position: absolute;
-  right: 10px;
-  top: 8px;
-}
-
-.localForm {
+section.formCont .localForm {
   padding: 15px;
 }
 
 .custom-select {
   border-bottom-right-radius: 0px;
   border-top-right-radius: 0px;
-  width: 200px;
+  max-width: 200px;
 }
 
 .formTitle {
   cursor: pointer;
+}
+
+.editForm {
+  display: -ms-grid;
+  display: grid;
+  -ms-grid-columns: 1fr 1fr;
+      grid-template-columns: 1fr 1fr;
+  width: 92vw;
+  grid-gap: 5px;
+}
+
+.editForm h6 {
+  grid-column: span 2;
+}
+
+.editForm .btnSubmit {
+  grid-column: span 2;
+}
+
+.editForm .custom-select {
+  border-radius: 4px;
+  border-bottom-right-radius: 0px;
+  border-bottom-left-radius: 0px;
+}
+
+.editForm .input-group > .form-control:not(:first-child) {
+  border-radius: 4px;
+  border-top-right-radius: 0px;
+  border-top-left-radius: 0px;
 }
 
 .row > div {
