--- a/public/scss/_forms.scss
+++ b/public/scss/_forms.scss
@@ -1,14 +1,44 @@
-.localForm {
-	padding: 15px;
+section.formCont {
+	.localForm {
+		padding: 15px;
+	}
 }
 
 .custom-select {
 	border-bottom-right-radius: 0px;
 	border-top-right-radius: 0px;
-	width: 200px;
+	max-width: 200px;
 	// @responsive => redefine max width
 }
 
 .formTitle {
 	cursor: pointer;
+}
+
+.editForm {
+	display: grid;
+	grid-template-columns: 1fr 1fr;
+	width: 92vw;
+	grid-gap: 5px;
+
+	h6 {
+		grid-column: span 2;
+	}
+
+	.btnSubmit {
+		grid-column: span 2;
+	}
+
+	.custom-select {
+		border-radius: 4px;
+		border-bottom-right-radius: 0px;
+		border-bottom-left-radius: 0px;
+		// @responsive => redefine max width
+	}
+
+	.input-group > .form-control:not(:first-child) {
+		border-radius: 4px;
+		border-top-right-radius: 0px;
+		border-top-left-radius: 0px;
+	}
 }
