--- a/public/scss/main.scss
+++ b/public/scss/main.scss
@@ -41,3 +41,11 @@ p {
 	outline: none !important;
 	box-shadow: none !important;
 }
+
+.btn-default {
+	background-color: $fontColor;
+}
+
+.btn-basic {
+	background-color: $steelGray;
+}
