--- a/public/css/main.css
+++ b/public/css/main.css
@@ -9,7 +9,7 @@
 }
 
 #content #rectangle {
-  border: 1px solid white;
+  border: 1px solid #ced4da;
   position: fixed;
   bottom: 10%;
   overflow: hidden;
@@ -92,22 +92,21 @@
   content: ': ';
 }
 
-section.localNav {
+section.insideNav {
   display: -ms-grid;
   display: grid;
-  grid-gap: 5px;
-  padding: 5px;
+  grid-gap: 4px;
+  padding: 4px;
 }
 
-section.localNav .navBtn {
-  background-color: #f9fafb;
+section.insideNav .navBtn {
   display: block;
   -webkit-box-shadow: none;
           box-shadow: none;
 }
 
-section.localNav .navBtn:hover {
-  background-color: #ced4da;
+.navMainBtn {
+  border-radius: 999px;
 }
 
 section.localTable {
@@ -299,5 +298,13 @@ p {
   outline: none !important;
   -webkit-box-shadow: none !important;
           box-shadow: none !important;
+}
+
+.btn-default {
+  background-color: #f9fafb;
+}
+
+.btn-basic {
+  background-color: #a8b0b2;
 }
 /*# sourceMappingURL=main.css.map */
