--- a/public/scss/_layout.scss
+++ b/public/scss/_layout.scss
@@ -8,7 +8,7 @@
 	}
 
 	#rectangle {
-		border: 1px solid white;
+		border: 1px solid $mildGray;
 		position: fixed;
 		bottom: 10%;
 		overflow: hidden;
