--- a/public/css/main.css
+++ b/public/css/main.css
@@ -168,8 +168,8 @@ section.localCard {
   display: grid;
   width: 92vw;
   padding: 12px 9px 9px 9px;
-  -ms-grid-columns: 61.8% 38.2%;
-      grid-template-columns: 61.8% 38.2%;
+  -ms-grid-columns: 50% 50%;
+      grid-template-columns: 50% 50%;
   -ms-grid-rows: 50px;
       grid-template-rows: 50px;
   grid-auto-rows: 30px;
@@ -202,6 +202,11 @@ section.localCard .main {
 section.localCard .side {
   -ms-grid-column: 2;
   grid-column: 2;
+}
+
+.localCard#reports .main,
+.localCard#reports .side {
+  text-align: right;
 }
 
 section.formCont .localForm {
