--- a/public/css/main.css
+++ b/public/css/main.css
@@ -115,7 +115,8 @@ section.localTable {
   padding-bottom: 100%;
 }
 
-section.localTable .tableRow {
+section.localTable .tableRow,
+section.localTable .tableHeader {
   cursor: pointer;
 }
 
