--- a/public/scss/_table.scss
+++ b/public/scss/_table.scss
@@ -4,7 +4,8 @@ section.localTable {
 	font-size: 14px;
 	padding-bottom: 100%;
 
-	.tableRow {
+	.tableRow,
+	.tableHeader {
 		cursor: pointer;
 	}
 
