--- a/public/css/main.css
+++ b/public/css/main.css
@@ -273,6 +273,10 @@ section.formCont .localForm {
   padding: 15px;
 }
 
+section.formCont #delete-button-wrapper {
+  padding-left: 5px;
+}
+
 .custom-select {
   border-bottom-right-radius: 0px;
   border-top-right-radius: 0px;
@@ -284,11 +288,11 @@ section.formCont .localForm {
 }
 
 .editForm {
+  padding: 15px;
   display: -ms-grid;
   display: grid;
   -ms-grid-columns: 1fr 1fr;
       grid-template-columns: 1fr 1fr;
-  width: 92vw;
   grid-gap: 5px;
 }
 
