--- a/public/scss/main.scss
+++ b/public/scss/main.scss
@@ -49,3 +49,30 @@ p {
 .btn-basic {
 	background-color: $steelGray;
 }
+
+.btn-transparent {
+	border-radius: 99px;
+	border: 2px solid white;
+	color: white;
+	background-color: transparent;
+}
+.btn-transparent:hover {
+	background-color: white;
+}
+
+textarea:hover,
+input:hover,
+textarea:active,
+input:active,
+textarea:focus,
+input:focus,
+button:focus,
+button:active,
+button:hover,
+label:focus,
+.btn:active,
+.btn.active {
+	outline: 0px !important;
+	-webkit-appearance: none;
+	box-shadow: none !important;
+}
