--- a/public/css/main.css
+++ b/public/css/main.css
@@ -329,6 +329,8 @@ section.formCont #delete-button-wrapper {
 
 .formTitle {
   cursor: pointer;
+  text-align: center;
+  margin-bottom: 25px;
 }
 
 .editForm {
@@ -381,6 +383,10 @@ table {
 #appContainer {
   display: none;
   color: #f9fafb;
+}
+
+#rectangle {
+  z-index: 999;
 }
 
 .hide {
