--- a/public/scss/_layout.scss
+++ b/public/scss/_layout.scss
@@ -8,6 +8,7 @@
 	}
 
 	#rectangle {
+		box-shadow: 0px 0px 10px 5px rgb(55, 55, 55);
 		border: 1px solid $mildGray;
 		position: fixed;
 		bottom: 10%;
@@ -16,8 +17,7 @@
 		left: 50%;
 		transform: translateX(-50%);
 		background-color: $offWhite;
-		border-radius: 10px;
-		box-shadow: 0 1px 3px rgba(0, 0, 0, 0.12), 0 1px 2px rgba(0, 0, 0, 0.24);
+		border-radius: 4px;
 	}
 
 	#custom-nav {
