FormEdit uses state to fetch objects

--- a/public/scss/_table.scss
+++ b/public/scss/_table.scss
@@ -54,6 +54,10 @@ section.localTable {
 		font-weight: bold;
 	}
 
+	#paginationPlaceholder {
+		height: 15px;
+	}
+
 	#download-link-wrapper {
 		width: 100px;
 		margin: 0 auto;
