--- a/public/css/main.css
+++ b/public/css/main.css
@@ -216,6 +216,16 @@ section.localTable #download-link-wrapper #download-as-csv {
   width: 100%;
 }
 
+#ordersTable .paid td:last-child {
+  -webkit-text-decoration: underline double forestgreen;
+          text-decoration: underline double forestgreen;
+}
+
+#ordersTable .unpaid td:last-child {
+  -webkit-text-decoration: underline double firebrick;
+          text-decoration: underline double firebrick;
+}
+
 #ordersTable th:nth-of-type(1) {
   width: 13%;
 }
