--- a/public/scss/_table.scss
+++ b/public/scss/_table.scss
@@ -100,6 +100,18 @@ section.localTable {
 	table-layout: fixed;
 	width: 100%;
 
+	.paid {
+		td:last-child {
+			text-decoration: underline double forestgreen;
+		}
+	}
+
+	.unpaid {
+		td:last-child {
+			text-decoration: underline double firebrick;
+		}
+	}
+
 	th:nth-of-type(1) {
 		width: 13%;
 	}
