--- a/public/css/main.css
+++ b/public/css/main.css
@@ -211,20 +211,24 @@ section.localTable #download-link-wrapper #download-as-csv {
   width: 40%;
 }
 
-#expensesTable {
+#expensesTable,
+#spentTable {
   table-layout: fixed;
   width: 100%;
 }
 
-#expensesTable th:nth-of-type(1) {
+#expensesTable th:nth-of-type(1),
+#spentTable th:nth-of-type(1) {
   width: 20%;
 }
 
-#expensesTable th:nth-of-type(2) {
+#expensesTable th:nth-of-type(2),
+#spentTable th:nth-of-type(2) {
   width: 40%;
 }
 
-#expensesTable th:nth-of-type(3) {
+#expensesTable th:nth-of-type(3),
+#spentTable th:nth-of-type(3) {
   width: 40%;
 }
 
