--- a/public/scss/_table.scss
+++ b/public/scss/_table.scss
@@ -1,5 +1,5 @@
 // @refactor change .localTable to #localTable
-section.localTable {
+.localTable {
 	background-color: $offWhite;
 	font-size: 14px;
 
